# multi-agent-orchestrator

./: .gitignore  README.md  debug-env.sh  package-lock.json  package.json  projects.config.json  tsconfig.json
.claude/skills/: planning.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
.sessions/01ff558f/: chat.md
.sessions/0ff0c442/: chat.md  plan.json
.sessions/119a7e30/: chat.md  plan.json
blog/: day-01.md  day-02.md  day-03.md
docs/: README.md  building-features.md  cli-reference.md  configuration.md  credentials.md  deployment.md  design-mode.md  dev-servers.md  getting-started.md  git-integration.md  github-integration.md  modes.md  notifications.md  permissions.md  planning-and-sessions.md  project-templates.md  projects.md  session-execution.md  troubleshooting.md  workspaces.md
homebrew-orchestrator/: README.md
hook-templates/: notification.sh  postToolUse.sh  preToolUse.sh  stop.sh  subagentStop.sh
hooks/: on_error.sh  on_question.sh  request_restart.sh
orchestrator-backend/: obfuscator.config.json  package.json  tsconfig.json
orchestrator-homebrew/: README.md
orchestrator-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
orchestrator-tauri/capabilities/: default.json
orchestrator-tauri/icons/: icon.icns
orchestrator-tauri/src/: lib.rs  main.rs
orchestrator-types/: package.json
orchestrator-web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
scripts/: aio  build-cli.sh  build-release.sh  build-tauri.sh  dev-tauri.sh  orchy  update-homebrew-cask.sh
src/: index.ts  types.ts
src-tauri/: tauri.conf.json
web/: package-lock.json  package.json
(+350 files in other folders)
